samples/_failures_safe/1761040017_7ae61f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a2c605ca.c: In function ‘main’:
./samples/SAFE/__tmp_a2c605ca.c:148:27: error: missing terminating " character
  148 |         choice = read_int("
      |                           ^
./samples/SAFE/__tmp_a2c605ca.c:148:9: error: expected expression at end of input
  148 |         choice = read_int("
      |         ^~~~~~
./samples/SAFE/__tmp_a2c605ca.c:148:18: error: too few arguments to function ‘read_int’
  148 |         choice = read_int("
      |                  ^~~~~~~~
./samples/SAFE/__tmp_a2c605ca.c:15:5: note: declared here
   15 | int read_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_a2c605ca.c:148:9: error: expected declaration or statement at end of input
  148 |         choice = read_int("
      |         ^~~~~~
./samples/SAFE/__tmp_a2c605ca.c:148:9: error: expected declaration or statement at end of input
